# gharchive-event-platform

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
airflow/: Dockerfile  docker-compose.yaml  docker-compose.yml
airflow/dags/: gharchive_events_pipeline.py
gharchive_dbt/: .user.yml  dbt_project.yml  profiles.yml
gharchive_dbt/macros/: anchor_date.sql  test_distinct_event_dates_cover_past_days.sql
gharchive_dbt/models/: schema.yml
gharchive_dbt/models/fct/: fct_repo_daily_watch_fork_metrics.sql
gharchive_dbt/models/marts/: marts_fork_top_repos_7d.sql  marts_repo_intent_classification.sql  marts_star_to_fork_conversion.sql  marts_watch_rasing_repos_7d.sql  marts_watch_top_repos_7d.sql
gharchive_dbt/models/staging/: source.yml  stg_fork_events.sql  stg_watch_events.sql
src/gharchive_events/: __init__.py
src/gharchive_events/ingestion/: __init__.py  gharchive_to_gcs.py
src/gharchive_events/load/: __init__.py  load_processed_to_bq.py
src/gharchive_events/transform/: __init__.py  gharchive_events_transform.py
src/gharchive_events/utils/: config.py
terraform/: main.tf  terraform.tfvars  terraform.tfvars.example  var.tf
